@@ -1,3 +1,4 @@
+- Fixed crash-on-exit in minimal.rb by changing Dialog superclass (Kevin Smith)
 - Added WXRUBY_RELEASE build option (Alex Fenton/Kevin Smith)
 - Enabled focus event handlers in bigdemo/wxTextCtrl.rb (Roy Sutton)
 - Added default App#on_assert to wx.rb (Kevin Smith)
